fix spacing

--- a/Components/About/About/styles.module.css
+++ b/Components/About/About/styles.module.css
@@ -1,6 +1,7 @@
 .section {
     width: 100%;
     height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,9 +36,6 @@
 }
 /* Medium devices (landscape tablets, 768px and up) */
 @media (min-width: 768px) {
-    .section {
-        min-height: 100vh;
-    }
     .lines p {
         font-size: large;
     }
